--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -531,11 +531,11 @@ Overall, the full IAS produced the greatest number of significant standardized e
 Study 2 examined the dispositional correlates of the IAS and whether the refined 14-item version offers practical advantages over the original 21-item scale. The findings clarify the conceptual boundaries of self-reported interoceptive accuracy and underscore the domain-specific nature of these standardized associations.
 
 <!-- Interoception and correlates - item specific -->
-The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023; @todd2022]. Associations with the BPQ Body Awareness subscale were consistent with previous reports on positive association between these measures [@brand2023; @campos2021; @koike2023; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022].
+The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023; @todd2022]. Associations with the BPQ Body Awareness subscale were consistent with previous reports on positive association between these measures [@brand2023; @koike2023; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022]. In contrast, measures of interoceptive difficulties, including alexithymia and interoceptive confusion, were negatively associated with IAS scores, consistent with prior research [@brand2023; @koike2023; @lin2023; @murphy2019]. 
 
-In contrast, measures of interoceptive difficulties, including alexithymia and interoceptive confusion, were negatively associated with IAS scores, consistent with prior research [@brand2023; @koike2023; @lin2023; @murphy2019]. These associations were strongest for visceral pairings, such as Hungry–Thirsty and Bruise–Blood sugar, and weaker or nonsignificant for other bodily domains, highlighting the domain-specific nature of interoceptive self-report.
+Although associations between the IAS and the BPQ subscales replicated prior work, interpretation remains uncertain due to conceptual ambiguity in the BPQ–Body Awareness subscale. Prior studies have reported non-existent [e.g., @murphy2019], negative, and even quadratic relationships (e.g., @campos2021; @lin2023), and some authors have suggested that these mixed findings stem from divergent interpretations of the items—specifically, whether they capture attentional focus on bodily sensations or perceived accuracy in detecting them (e.g., @gabriele2022Dissociations; @campos2021). Thus, although we observed a positive association between the BPQ–Body Awareness and the IAS, this result should be interpreted with caution, and future studies should assess participants’ understanding of BPQ items to clarify the nature of this relationship.
 
-Across mood, most item pairings displayed small-to-moderate standardized coefficients, indicating shared variance between interoceptive self-reports and affective tendencies. In contrast, associations with psychopathology were more selective: negative associations were primarily observed for visceral pairings such as Hungry–Thirsty and Bruise–Blood sugar, whereas other domains yielded weaker or nonsignificant effects. This pattern suggests that self-reported interoceptive accuracy is more strongly associated with affective and clinical traits for visceral sensations than for somatic or respiratory reflexes [@murphy2019; @koike2023].
+Across mood, most item pairings displayed small-to-moderate standardized coefficients, indicating shared variance between interoceptive self-reports and affective tendencies, aligning with previous findings [@murphy2019; @koike2023]. In contrast, associations with psychopathology were more selective: negative associations were primarily observed for visceral pairings such as Hungry–Thirsty and Bruise–Blood sugar, whereas other domains yielded weaker or nonsignificant effects. This pattern suggests that self-reported interoceptive accuracy is more strongly associated with affective and clinical traits for visceral sensations than for somatic or respiratory reflexes.
 
 <!-- Personality, worldview, and boundaries of interoception -->
 
@@ -553,39 +553,46 @@ The present mega-analysis provides a comprehensive evaluation of the IAS, examin
 
 <!-- Structural insights from Study 1 -->
 
-<!-- Structural insights from Study 1 -->
-
 Study 1 re-analysed the IAS using complementary psychometric and network-based approaches. Across analyses, seven stable item pairings emerged (Hungry–Thirsty, Urinate–Defecate, Muscles–Pain, Breathing–Heart, Cough–Sneeze, Wind–Burp, and Bruise–Blood sugar), yielding a refined 14-item structure with superior fit and cross-dataset stability compared to previously proposed unidimensional or bifactor models. These results challenge interpretations of the IAS as a single latent construct [e.g., @brand2023; @murphy2019] and instead indicate that it captures multiple, interrelated but domain-specific clusters of bodily sensations.
 
-Unlike @lin2023, whose 12-item solution supported unidimensionality, the present findings suggest that local dependencies between items reflect meaningful theoretical coupling among functionally related sensations (e.g., Heart–Breathing). Such clustering likely mirrors the way bodily signals co-occur physiologically or phenomenologically (e.., hunger with thirst, coughing with sneezing) and are therefore perceived and evaluated together. Perceived accuracy in one bodily system may generalize to conceptually or functionally linked sensations, yielding a clustered rather than continuous organization of interoceptive beliefs. Consistent with this view, self-reported interoceptive awareness across related axes (e.g., cardiac and respiratory) tends to show positive associations [@garfinkel2016interoceptive], whereas objective measures of interoceptive accuracy across modalities typically show weak or absent correlations [@bruni2023interoception; @ferentzi2018interoceptive]. This dissociation suggests that subjective interoceptive beliefs are structured according to functional bodily domains rather than reflecting a single general capacity.
+Unlike @lin2023, whose 12-item solution supported unidimensionality, the present findings suggest that local dependencies between items reflect meaningful theoretical coupling among functionally related sensations (e.g., Heart–Breathing). Such clustering likely mirrors the way bodily signals co-occur physiologically or phenomenologically (e.., hunger with thirst, coughing with sneezing) and are therefore perceived and evaluated together. Perceived accuracy in one bodily system may generalize to conceptually or functionally linked sensations, yielding a clustered rather than continuous organization of interoceptive beliefs. 
+
+Consistent with this interpretation, self-reported interoceptive awareness across related bodily axes (e.g., cardiac and respiratory) tends to show positive associations [@garfinkel2016interoceptive], whereas objective measures of interoceptive accuracy across modalities typically show weak or absent correlations [@bruni2023interoception; @ferentzi2018interoceptive]. This dissociation indicates that actual interoceptive abilities are largely domain-specific, while subjective interoceptive beliefs generalize across functionally related systems. Accordingly, the present clustering likely reflects the conceptual organization of interoceptive beliefs, structured by perceived bodily interdependence, rather than a single general interoceptive capacity.
 
 <!-- Dispositional correlates and domain specificity (Study 2) -->
 
 <!-- Interoception and interoception-related -->
 Study 2 extended these findings by examining the IAS’s associations with interoceptive, affective, personality, and belief-related traits. Consistent with prior work, the IAS correlated positively with adaptive aspects of interoceptive sensibility (e.g., MAIA subscales reflecting noticing, attention regulation, and body trust) and negatively with interoceptive difficulties, namely alexithymia and interoceptive confusion [e.g., @brand2023; @garfinkel2015knowing; @gaggero2021].
 
-<!-- Although associations between the IAS and the BPQ subscales replicated prior work (e.g., @brand2023; @koike2023; @gaggero2021), interpretation remains uncertain due to conceptual ambiguity in the BPQ–Body Awareness subscale. Prior studies have reported positive, negative, and even quadratic relationships (e.g., @campos2021; @lin2023), and some authors have suggested that these mixed findings stem from divergent interpretations of the items—specifically, whether they capture attentional focus on bodily sensations or perceived accuracy in detecting them (e.g., @gabriele2022Dissociations; @campos2021). Thus, although we observed a positive association between the BPQ–Body Awareness and the IAS, this result should be interpreted with caution, and future studies should assess participants’ understanding of BPQ items to clarify the nature of this relationship. -->
-
 <!-- Mood and psychopathological disorders domain specific -->
-Across dispositional constructs, individuals reporting higher symptoms of depression and anxiety tended to perceive themselves as less accurate in detecting bodily signals, in line with previous findings [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. Crucially, these associations were not uniform across bodily domains: the strongest effects involved visceral sensations (e.g., hunger, thirst), whereas cardiorespiratory and expulsion domains showed weaker or inconsistent relationships. This domain specificity suggests that beliefs about one’s visceral accuracy may be more psychologically and clinically relevant than beliefs about reflexive or surface sensations.
+Across dispositional constructs, individuals reporting higher symptoms of depression and anxiety tended to perceive themselves as less accurate in detecting bodily signals, in line with previous findings [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. Crucially, these associations were not uniform across bodily domains: the strongest, and most robust, effects involved visceral sensations (e.g., hunger, thirst), whereas cardiorespiratory and expulsion domains showed weaker or inconsistent relationships. This domain specificity suggests that beliefs about one’s visceral accuracy may be more psychologically and clinically relevant than beliefs about reflexive or surface sensations.
 
-This pattern may help clarify inconsistencies in the literature linking interoception and emotion. Reviews and meta-analyses report that performance-based measures of interoceptive accuracy, usually cardioception, often show weak or absent correlations with depression and anxiety [@jenkinson2024interoception; @banellis2025interoceptive; @adams2022association]. In contrast, self-reported interoceptive measures, which contain items relevant to multiple bodily domains, typically show stronger, often negative, associations with internalizing traits [e.g., @brand2022; @lin2023; @clemente2024relationship]. These discrepancies likely reflect both conceptual distinctions between perceptual accuracy and metacognitive self-belief [@khalsa2018; @garfinkel2015knowing; @suksasilp2022towards] and variation in the bodily domains assessed. The present results extend this framework by demonstrating that associations between interoceptive self-beliefs and affective traits are concentrated in psychologically salient visceral domains. Thus, the field’s heavy reliance on cardioceptive tasks may have obscured more meaningful relationships in other interoceptive modalities.
+This pattern may help clarify inconsistencies in the literature linking interoception and emotion. Reviews and meta-analyses report that performance-based measures of interoceptive accuracy, usually cardioception, often show weak or absent correlations with depression and anxiety [@jenkinson2024interoception; @banellis2025interoceptive; @adams2022association]. In contrast, self-reported interoceptive measures, which contain items relevant to multiple bodily domains, typically show stronger, often negative, associations with internalizing traits [e.g., @brand2022; @lin2023; @clemente2024relationship]. 
 
+These discrepancies likely reflect both conceptual distinctions between perceptual accuracy and metacognitive self-belief [@khalsa2018; @garfinkel2015knowing; @suksasilp2022towards] and variation in the bodily domains assessed. The present results extend this framework by demonstrating that associations between interoceptive self-beliefs and affective traits are concentrated in psychologically salient visceral domains. Thus, the field’s heavy reliance on cardioceptive tasks may have obscured more meaningful relationships in other interoceptive modalities.
 
 <!-- Psychopathology -->
-Beyond mood, similar though weaker patterns emerged for autistic traits, schizotypy, and maladaptive personality dimensions. These traits tended to correlate negatively with self-perceived interoceptive accuracy, particularly within visceral and musculoskeletal domains, while showing little or no association in other areas. This selective pattern suggests that diminished beliefs in bodily perception may contribute to specific social–emotional and personality features, rather than reflecting a general interoceptive deficit. These results align with evidence that interoceptive self-beliefs, more than objective accuracy, track variation in emotional awareness, social connectedness, and psychopathology [@torregrossa2022interoceptive; @williams2023characterizing; @brand2022].
+Beyond mood, similar though weaker patterns emerged for autistic traits, schizotypy, and maladaptive personality dimensions. These traits tended to correlate negatively with self-perceived interoceptive accuracy, particularly within visceral and musculoskeletal domains, while showing little or no association in other areas. This selective pattern suggests that diminished beliefs in bodily perception may contribute to specific social–emotional and personality features, rather than reflecting a general interoceptive deficit. 
 
-Taken together, these findings suggest that self-perceived interoceptive accuracy is a differentiated construct, varying systematically across bodily systems and psychological traits. Beliefs about visceral sensations, in particular, show the most consistent associations with affective and dispositional features. Although modest in magnitude, these effects underscore the value of considering domain-specificity when linking interoceptive beliefs to emotion and mental health.
+These results align with previous evidence showing that interoceptive self-beliefs are meaningfully related to emotional awareness, social connectedness, and psychopathology [@torregrossa2022interoceptive; @williams2023characterizing; @brand2022]. The present findings extend this literature by showing that these associations are domain-specific rather than global across bodily systems.
+
+Taken together, these findings suggest that self-perceived interoceptive accuracy is a differentiated construct, varying systematically across bodily systems. Beliefs about visceral sensations, in particular, show the most consistent associations with affective and dispositional features. Although modest in magnitude, these effects underscore the value of considering domain-specificity when linking interoceptive beliefs to emotion and mental health.
 
 <!-- Methodological and applied considerations -->
-Methodologically, combining traditional psychometrics with network-based approaches proved valuable. EGA complemented factor analysis by identifying meaningful inter-item dependencies, producing a more interpretable and stable structure. The refined 14-item IAS balances parsimony and predictive validity, illustrating how network-informed scale refinement, beyond scale development [@golino2017exploratory], can enhance construct clarity.
+Methodologically, combining traditional psychometrics with network-based approaches proved valuable. EGA complemented, and often surpassed, factor analysis by identifying meaningful inter-item dependencies, producing a more interpretable and stable structure. The refined 14-item IAS balances parsimony and predictive validity, illustrating how network-informed scale refinement, beyond scale development [@golino2017exploratory], can enhance construct clarity.
 
-The IAS nonetheless remains limited in scope. Certain interoceptive modalities (e.g., gastric, tactile) are underrepresented, and items lack contextual specification (e.g., physiological vs. affective triggers). For instance, a racing heart could signal anxiety or exercise; without context, it is unclear which state participants referenced from. Such ambiguities may constrain ecological validity and contribute to variability across studies [@vlemincx2023novel]. Expanding item content and adopting context-specific phrasing will be important for future measurement development.
+The IAS nonetheless remains limited in scope. Pairing items improved interpretability and outperformed an overall score of self-reported interoceptive accuracy in associations with affective and dispositional traits, but dimensions with only two items (one per bodily domain) remain suboptimal, particularly for constructs that are broad or conceptually ambiguous [@allen2022single], such as beliefs about interoceptive accuracy across multiple bodily systems.
+
+Because perceived accuracy in one system can generalize to conceptually or functionally related sensations, two-item clusters may overemphasize these links and fail to capture variability across unrelated domains, while overall scores risk obscuring meaningful relationships.This limitation is especially important given that researchers may assume interoceptive abilities generalize across bodily domains, when in fact they do not. Building on @desmedt2022measures’ observation of a “jingle fallacy” in using self-reported interoceptive measures, the present findings extend this caution by highlighting that assuming beliefs replicate across domains constitutes a similar jingle fallacy. 
+
+Additionally, items lack contextual specification (e.g., physiological vs. affective triggers). For instance, a racing heart could signal anxiety or exercise; without context, it is unclear which state participants referenced from. Such ambiguities may constrain ecological validity and contribute to variability across studies [@vlemincx2023novel]. Expanding item content and adopting context-specific phrasing will be important for future measurement development to more comprehensively capture interoceptive beliefs.
 
 Clinically, the domain-specific structure of the IAS highlights that interoceptive disruptions in affective and psychopathological conditions may center primarily on beliefs about visceral sensations rather than global interoceptive deficits. This perspective suggests new routes for targeted assessment and intervention focusing on specific bodily domains.
 
 <!-- Limitations and future directions -->
-Nonetheless, the current work is not without its limiations. This paper did not evaluate the IAS alongside other questionnaires such as the BPQ or MAIA, whose conceptual overlap and psychometric inconsistencies complicate interpretation [@ferentzi2021examining; @rogowska2023validation; @campos2021; @vig2023self]. Because the IAS uniquely targets interoceptive self-reported accuracy, a dimension previously assessed only via performance tasks such as the HDT and HCT, our focus was on its structure and correlates rather than introducing established measures with documented shortcomings. Future work should employ contemporary analytic methods, such as EGA and network modeling, to evaluate convergent and discriminant validity across interoceptive domains and clarify how self-belief and accuracy measures jointly shape interoceptive functioning.
+Nonetheless, the current work is not without its limiations. This study focused exclusively on the IAS and did not evaluate the structure or subjective correlates of other commonly used interoception questionnaires, such as the BPQ or MAIA. Because the IAS uniquely targets interoceptive self-reported accuracy our focus was on its structure and correlates rather than introducing established measures with documented shortcomings [@ferentzi2021examining; @rogowska2023validation; @campos2021; @vig2023self].
+
+Another limitation is the lack of objective measures of interoceptive accuracy in this study. Incorporating cardiac, resporatory, and gastric performance-based measures would allow investigation of how beliefs about one’s interoceptive accuracy relate to actual performance. Such comparisons could clarify whether domain-specific self-reports reflect true perceptual sensitivity or primarily capture metacognitive and conceptual beliefs. Although prior research has shown weak or absent correlations between subjective and objective measures within the same domain [e.g., cardiac accuracy vs subjective accuracy, @brand2023; @petzke2024somatic; @arslanova2022], examining additional modalities, such as gastric perception, could reveal whether these patterns generalize across other interoceptive systems.
 
 <!-- Conclusion -->
 
