updated bib and pdf

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -1249,6 +1249,14 @@ abstract = {Conscious interoception, the perception of internal bodily states, i
   year={1993}
 }
 
+@misc{allen2022single,
+  title={Single item measures in psychological science},
+  author={Allen, Mark S and Iliescu, Dragos and Greiff, Samuel},
+  journal={European journal of psychological assessment},
+  year={2022},
+  publisher={Hogrefe Publishing}
+}
+
 @article{donnellan2006mini,
   title={The mini-IPIP scales: tiny-yet-effective measures of the Big Five factors of personality.},
   author={Donnellan, M Brent and Oswald, Frederick L and Baird, Brendan M and Lucas, Richard E},
