--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -398,17 +398,6 @@
   year={2007},
   publisher={American College of Physicians}
 }
-@article{makowski2023structure,
-  title={The structure of deception: Validation of the lying profile questionnaire},
-  author={Makowski, Dominique and Pham, Tam and Lau, Zen J and Raine, Adrian and Chen, SH Annabel},
-  journal={Current Psychology},
-  volume={42},
-  number={5},
-  pages={4001--4016},
-  year={2023},
-  publisher={Springer}
-}
-
 @article{zsido2020development,
   title={Development of the short version of the spielberger state—trait anxiety inventory},
   author={Zsido, Andras N and Teleki, Szidalisz A and Csokasi, Krisztina and Rozsa, Sandor and Bandi, Szabolcs A},
@@ -728,6 +717,26 @@
   year={2020}
 }
 
+@article{ludecke2020extracting,
+  title={Extracting, computing and exploring the parameters of statistical models using R},
+  author={L{\"u}decke, Daniel and Ben-Shachar, Mattan S and Patil, Indrajeet and Makowski, Dominique},
+  journal={Journal of Open Source Software},
+  volume={5},
+  number={53},
+  pages={2445},
+  year={2020}
+}
+
+@article{makowski2025modelbased,
+  title={modelbased: An R package to make the most out of your statistical models through marginal means, marginal effects, and model predictions},
+  author={Makowski, Dominique and Ben-Shachar, Mattan S and Wiernik, Brenton M and Patil, Indrajeet and Th{\'e}riault, R{\'e}mi and L{\"u}decke, Daniel},
+  journal={Journal of Open Source Software},
+  volume={10},
+  number={109},
+  pages={7969},
+  year={2025}
+}
+
 @incollection{desmedt2024conceptualization,
   title={The conceptualization and measurement of interoception},
   author={Desmedt, Olivier and Corneille, Olivier and Luminet, Olivier},
@@ -944,14 +953,6 @@
 	url = {http://dx.doi.org/10.31234/osf.io/p342w}
 }
 
-@misc{makowski2023a,
-	title = {The Heart can Lie: The Role of Interoception and Theory of Mind in Deception},
-	author = {Makowski, Dominique and Lau, Zen Juen and Pham, Tam and Te, Anshu and Kirk, Stephanie and Liauw Yong Tong, Claudia},
-	year = {2023},
-	month = {04},
-	date = {2023-04-23},
-	url = {http://dx.doi.org/10.31234/osf.io/p342w}
-}
 
 @article{solanolópez2018,
 	title = {Dimensions of Body-Awareness and Depressed Mood and Anxiety},
